--- a/package.json
+++ b/package.json
@@ -11,9 +11,18 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@cornerstonejs/core": "^3.19.5",
+    "@cornerstonejs/dicom-image-loader": "^3.25.0",
+    "@cornerstonejs/tools": "^3.19.5",
+    "canvas": "^3.1.0",
     "cornerstone-core": "^2.6.1",
+    "cornerstone-math": "^0.1.10",
+    "cornerstone-tools": "^6.0.10",
     "cornerstone-wado-image-loader": "^4.13.2",
     "dicom-parser": "^1.8.21",
+    "fs": "^0.0.1-security",
+    "hammerjs": "^2.0.8",
+    "konva": "^9.3.20",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "parser": "^0.1.4",
@@ -21,6 +30,7 @@
     "react": "^19.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
+    "react-konva": "^19.0.6",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
@@ -29,6 +39,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/hammerjs": "^2.0.46",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
